Update BGLSRestController.java